src/styles/components/watch.responsive.css
@media only screen and (max-width: 1200px) {
    .watch .details {
        flex-direction: column;
        gap: var(--large-padding);
    }

    .watch .container {
        width: 100% !important;
    }

    .watch .details .control .indicators {
        display: none;
    }

    .watch .details .area.minimal .cards .card {
        width: calc(25% - var(--small-padding));
    }

    .watch .details .right.full-width {
        flex-direction: column;
    }
}

@media only screen and (max-width: 700px) {
    .watch .details .cast-cards .cast-card {
        width: calc(20% - var(--small-padding));
    }

    .watch .details .review-cards .review-card {
        width: calc(100% - var(--small-padding));
    }

    .watch .details .review-cards .review-card .stars {
        display: none;
    }

    .watch .details .review-cards .review-card .rating {
        width: 1.8rem;
    }

    .watch .details .season-card {
        padding: var(--small-padding);
    }

    .watch .details .season-card .episodes .episode {
        flex-direction: column-reverse;
        padding: var(--small-padding);
    }

    .watch .details .season-card .episodes .episode .description {
        display: none;
    }
    
    .watch .details .season-card .episodes .episode .episode-left {
        flex-direction: row-reverse;
        justify-content: space-between;
        width: 100%;
    }

    .watch .details .area.minimal .cards .card {
        width: calc(50% - var(--small-padding));
    }
}

